--- a/theme/pisosdemadera/lineas.html
+++ b/theme/pisosdemadera/lineas.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<html data-wf-page="61957fe15232291fe50f4912" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
+<html data-wf-page="61958814891a3908b48c86eb" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
+  
+  
+  
+  
+  
+  
+  
   
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
@@ -27,6 +34,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
+  <meta name="keywords" content="pisos de madera">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
@@ -37,8 +45,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div data-delay="3000" data-animation="cross" class="slider-catalogo-pisos-copy w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
       <div class="contenedor-texto-banner-catalogo">
         <div class="titulo-categoria-pisos w-container">
-          <div>{{ texts.-18e9feb4 }}</div>
-          <h1 class="heading-h1 center light"></h1>
+          <h1 class="heading-h1 center light">{{ texts.-b5159a8 }}</h1>
         </div>
       </div>
       <div class="w-slider-mask">
@@ -59,11 +66,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="w-dyn-list">
       <div role="list" class="contenedor-catalogo w-dyn-items">
         <div role="listitem" class="contenedor-categoria-catalogo w-dyn-item">
-          <a href="{{ links.525165e8 }}" class="link-block-5link-block-5 w-inline-block">
-            <div class="imagen-boton-redondo-2 catalogo-ingenieria"></div>
-          </a>
           <h2 class="h2-small"></h2>
-          <a href="{{ links.23 }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
+          <a href="{{ links.23 }}" class="boton w-button">{{ texts.-3e91794a }}</a>
         </div>
       </div>
       <div class="w-dyn-empty">
