--- a/theme/[linea].html
+++ b/theme/[linea].html
@@ -38,7 +38,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="contenedor-texto-banner-catalogo">
         <div class="titulo-categoria-pisos w-container">
           <div>{{ texts.-18e9feb4 }}</div>
-          <h1 class="heading-h1 center light"></h1>
+          <h1 class="heading-h1 center light">{{ title }}</h1>
         </div>
       </div>
       <div class="w-slider-mask">
