--- a/theme/[marca].html
+++ b/theme/[marca].html
@@ -32,6 +32,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
+  {%- include "partials/menu" -%}
+  <div class="section-categorias-catalogo wf-section">
+    <div class="contenedor-categoria-titulo">
+      <div>{{ texts.45bda1c }}</div>
+      <h1></h1>
+    </div>
+    <div class="w-dyn-list">
+      <div role="list" class="contenedor-catalogo w-dyn-items">
+        <div role="listitem" class="contenedor-categoria-catalogo w-dyn-item">
+          <a href="{{ links.525165e8 }}" class="link-block-5link-block-5 w-inline-block">
+            <div class="imagen-boton-redondo-2 catalogo-ingenieria"></div>
+          </a>
+          <h2 class="h2-small"></h2>
+          <a href="{{ links.23 }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
+        </div>
+      </div>
+      <div class="empty-state-2 w-dyn-empty">
+        <div>{{ texts.-6a49d39f }}</div>
+      </div>
+    </div>
+  </div>
+  {%- include "partials/footer" -%}
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
