--- a/theme/[pisos].html
+++ b/theme/[pisos].html
@@ -37,6 +37,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="w-layout-grid grid-catalogo-producto">
       <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a564-e2114c95" class="div-block-20">
         <h1 class="titulo-catalogo-producto">{{ title }}</h1>
+        <p>{{ f_descripcion }}</p>
+        <div class="div-block-22"></div>
         <div class="cont-horizontal-texto categoria">
           <h2 class="texto-informacion">{{ texts.-7110666f }}</h2>
           {%- assign lineaOfPisos = f_linea | resolveReference -%}<a href="{{ lineaOfPisos.url }}" class="main-category">{{ lineaOfPisos.data.title }}</a>
@@ -49,11 +51,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h2 class="texto-informacion">{{ texts.-3be4eef5 }}</h2>
           {%- assign categoriaOfPisos = f_categoria | resolveReference -%}<a href="{{ categoriaOfPisos.url }}" class="main-category">{{ categoriaOfPisos.data.title }}</a>
         </div>
-        <p>{{ f_descripcion }}</p>
         <h2 class="heading-solicitar-cotizaci-n">{{ texts.438e20d7 }}</h2>
-        <div class="formulario w-form">
+        <div class="formulario-piso w-form">
           <form id="wf-form-Formulario" name="wf-form-Formulario" data-name="ulario" action="https://formbucket.com/f/buk_uRnr7tu3J7L3wtpeDRC9Ocy6" method="post" class="form-asesoria" data-ajax="true">
-            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a577-e2114c95"><label for="Nombre" class="field-label-2">{{ texts.-1e41be8f }}</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Nombre-2" data-name="Nombre 2" placeholder="" id="Nombre-2" required=""></div>
+            <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a577-e2114c95"><label for="Nombre-2" class="field-label-2">{{ texts.-1e41be8f }}</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Nombre-2" data-name="Nombre 2" placeholder="" id="Nombre-2" required=""></div>
             <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a57b-e2114c95"><label for="Correo" class="field-label-2">{{ texts.7708558d }}</label><input type="email" class="text-field-2 w-input" maxlength="256" name="Correo" data-name="Correo" placeholder="" id="Correo" required=""></div>
             <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a57f-e2114c95"><label for="Telefono" class="field-label-2">{{ texts.-24e37236 }}<span class="_10-digitos"></span>{{ texts.3a }}</label><input type="tel" class="text-field-2 w-input" maxlength="256" name="Telefono" data-name="Telefono" placeholder="" id="Telefono" required=""></div>
             <div id="w-node-_70786581-a769-fe2c-77a7-e8e41c16a586-e2114c95"><label for="Ciudad" class="field-label-2">{{ texts.-6df1f93e }}</label><input type="text" class="text-field-2 w-input" maxlength="256" name="Ciudad-2" data-name="Ciudad 2" placeholder="" id="Ciudad-2" required=""></div>
