--- a/theme/fibra-de-vidrio/productos.html
+++ b/theme/fibra-de-vidrio/productos.html
@@ -36,6 +36,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
+  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
@@ -54,7 +55,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <a href="{{ links.2758d250 }}" class="boton-naranja margen-inferior w-button">{{ texts.3fd8b3a7 }}</a>
           <h2 class="heading-2 center">{{ texts.-5f600124 }}</h2>
           <p class="paragraph dark medium center">{{ texts.-61050693 }}<br></p>
-          <div></div>
         </div>
       </div>
     </div>
