--- a/theme/mobiliario-y-carpinteria.html
+++ b/theme/mobiliario-y-carpinteria.html
@@ -34,12 +34,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
+  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <meta name="keywords" content="mobiliario, carpinteria, carpinteria residencial, carpinteria comercial">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
+  {%- include "partials/menu" -%}
   <div class="section-header-1 wf-section">
     <div data-delay="3500" data-animation="cross" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
       <div class="w-slider-mask">
@@ -53,7 +55,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-nav w-round"></div>
     </div>
-    {%- include "partials/menu" -%}
     <div class="div-heading-1">
       <div class="w-container">
         <h1 class="heading-h1 center light">{{ texts.688560ec }}</h1>
