--- a/theme/techos-y-cubiertas-para-pergolas.html
+++ b/theme/techos-y-cubiertas-para-pergolas.html
@@ -34,6 +34,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
+  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <meta name="keywords" content="techos y cubiertas para pergolas">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
@@ -41,9 +42,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         display: inline-block; }</style></head>
 <body>
   {%- include "partials/menu" -%}
-  <div id="decksdemadera" class="section-techos-y-cubiertas wf-section">{%- image images.2ebec603.url, images.2ebec603.alt, '[{"max":10000,"size":"160.98959350585938px"}]', 'width="161"' -%}
+  <div id="decksdemadera" class="section-techos-y-cubiertas-pagina wf-section">{%- image images.2ebec603.url, images.2ebec603.alt, '[{"max":10000,"size":"160.98959350585938px"}]', 'width="161"' -%}
     <div class="container-center w-container">
-      <h1 class="heading-h1 center">{{ texts.-4abb5670 }}</h1>
+      <h1 class="heading-h1 center">{{ texts.-4e95ba90 }}</h1>
       <p class="paragraph dark big center">{{ texts.-63e9c0fa }}</p>
       <p class="paragraph dark medium center">{{ texts.-3084597 }}</p>
       {%- include "partials/galeria-techos" -%}
@@ -211,6 +212,58 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <li class="list-item">{{ texts.4e3217bf }}</li>
           <li class="list-item">{{ texts.-6f76fb6e }}</li>
         </ul>
+      </div>
+    </div>
+  </div>
+  <div class="section-pergolas wf-section">
+    <div class="w-container">
+      <h2 class="heading-2 center">{{ texts.745648e1 }}</h2>
+      <div class="divisor-30px"></div>
+    </div>
+    <div class="div-horizontal">
+      <div class="div-33percent-pergolas">
+        <a href="{{ links.-6e365694 }}" class="link-block-rectangular w-inline-block">
+          <div class="imagen-boton-rectangular-vigaingenieria"></div>
+        </a>
+        <div class="div-center-vertical">
+          <a href="{{ links.-6e365694 }}" class="link-block-2 w-inline-block">
+            <h3 class="h3">{{ texts.323119e8 }}</h3>
+          </a>
+          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+        </div>
+      </div>
+      <div class="div-33percent-pergolas">
+        <a href="{{ links.23 }}" class="link-block-rectangular w-inline-block">
+          <div class="imagen-boton-rectangular-pergolamadera"></div>
+        </a>
+        <div class="div-center-vertical">
+          <a href="{{ links.23 }}" class="link-block-2 w-inline-block">
+            <h3 class="h3">{{ texts.-6606db80 }}</h3>
+          </a>
+          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+        </div>
+      </div>
+      <div class="div-33percent-pergolas">
+        <a href="{{ links.23 }}" class="link-block-rectangular w-inline-block">
+          <div class="imagen-boton-rectangular-fibradevidrio"></div>
+        </a>
+        <div class="div-center-vertical">
+          <a href="{{ links.23 }}" class="link-block-2 w-inline-block">
+            <h3 class="h3">{{ texts.-6f73ca48 }}</h3>
+          </a>
+          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+        </div>
+      </div>
+      <div class="div-33percent-pergolas">
+        <a href="{{ links.23 }}" class="link-block-rectangular w-inline-block">
+          <div class="imagen-boton-rectangular-pergolametal"></div>
+        </a>
+        <div class="div-center-vertical">
+          <a href="{{ links.23 }}" class="link-block-2 w-inline-block">
+            <h3 class="h3">{{ texts.7054690b }}</h3>
+          </a>
+          <a target="_blank" href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
+        </div>
       </div>
     </div>
   </div>
