--- a/theme/404.html
+++ b/theme/404.html
@@ -29,6 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
+  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
@@ -36,7 +37,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body>
   {%- include "partials/menu" -%}
   <div class="utility-page-wrap">
-    <div class="utility-page-content">{%- image images.-6087357f.url, images.-6087357f.alt, '[]', '' -%}
+    <div class="utility-page-content">{%- image images.-6087357f.url, images.-6087357f.alt, '[]', 'width="47" height="59"' -%}
       <h2>{{ texts.-164505f4 }}</h2>
       <div class="paragraph">{{ texts.-47d6deb8 }}</div>
       <a href="{{ links.2f }}" class="w-inline-block">
@@ -44,6 +45,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </a>
     </div>
   </div>
+  {%- include "partials/footer" -%}
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
