--- a/theme/index.html
+++ b/theme/index.html
@@ -36,6 +36,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
+  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
   <link rel="canonical" href="https://www.europisosdemaderaydecks.com">
   <meta name="keywords" content="pisos de madera, decks, pérgolas, vigas de ingeniería, sintético, PVC, resina, resinas, mantenimiento, guadalajara, mexico, instalación">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<script src="/assets/external/netlify-identity-widget.js"></script><style>picture { border: 0;
@@ -43,6 +44,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
+  {%- include "partials/menu" -%}
   <div class="section-header-1 wf-section">
     <div data-delay="3500" data-animation="cross" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
       <div class="w-slider-mask">
@@ -58,14 +60,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-nav w-round"></div>
     </div>
-    {%- include "partials/menu" -%}
     <div class="div-heading-1">
       <div class="w-container">
-        <h1 class="heading-h1 center light">{{ texts.5f16505b }}</h1>
-        <p class="paragraph light big center">{{ texts.1b163aab }}</p>
-        <div class="div-block">
-          <a href="{{ links.5a77819a }}" class="boton-naranja w-button">{{ texts.3fd8b3a7 }}</a>
-        </div>
+        <h1 class="heading-h1-light">{{ texts.-6cdc9155 }}</h1>
+        <p class="paragraph-banner">{{ texts.-6df279ca }}</p>
       </div>
     </div>
   </div>
@@ -79,10 +77,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="slide-inicio-03 w-slide"></div>
             <div class="slide-inicio-04 w-slide"></div>
           </div>
-          <div class="w-slider-arrow-left">
+          <div class="left-arrow-2 w-slider-arrow-left">
             <div class="icon-2 w-icon-slider-left"></div>
           </div>
-          <div class="w-slider-arrow-right">
+          <div class="right-arrow-2 w-slider-arrow-right">
             <div class="icon-3 w-icon-slider-right"></div>
           </div>
           <div class="slide-nav w-slider-nav w-round"></div>
@@ -92,69 +90,65 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div id="servicios" class="section-servicios wf-section">
     <div class="container-2 w-container">
-      <div class="heading-2 center">{{ texts.7ee45fce }}</div>
-      <p class="paragraph dark big center">{{ texts.6a03baa6 }}<span class="bold">{{ texts.6f20543 }}</span>{{ texts.-7679c771 }}</p>
+      <h2 class="heading-2 center">{{ texts.730179a5 }}</h2>
+      <p class="paragraph dark big center">{{ texts.6a03baa6 }}<span class="bold">{{ texts.6f20543 }}</span>{{ texts.23683f06 }}</p>
     </div>
-    <div class="div-columnas-vertical">
-      <div class="div-20percent">
+    <div class="contenedor-servicios">
+      <div class="div-servicios-inicio">
         <a href="{{ links.525165e8 }}" class="link-block w-inline-block">
           <div class="imagen-boton-redondo pergolas"></div>
+          <div class="descripcion-link">{{ texts.-6606db80 }}</div>
         </a>
         <h2 class="h2-small">{{ texts.6451f65d }}</h2>
         <p class="paragraph dark small center">{{ texts.-76f6fe88 }}</p>
-        <a href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+        <a href="{{ links.525165e8 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
         <div class="div-center-vertical"></div>
       </div>
-      <div class="div-20percent">
+      <div class="div-servicios-inicio">
         <a href="{{ links.55e45e1b }}" class="link-block w-inline-block">
           <div class="imagen-boton-redondo decks"></div>
+          <div class="descripcion-link">{{ texts.-49342ec }}</div>
         </a>
         <h2 class="h2-small">{{ texts.3eda8ca }}</h2>
         <p class="paragraph dark small center">{{ texts.-7c11f316 }}</p>
-        <a href="{{ links.55e45e1b }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+        <a href="{{ links.55e45e1b }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
         <div class="div-center-vertical inicio"></div>
       </div>
-      <div class="div-20percent">
+      <div class="div-servicios-inicio">
         <a href="{{ links.-6b750f0c }}" class="link-block w-inline-block">
           <div class="imagen-boton-redondo pisosdemadera"></div>
+          <div class="descripcion-link">{{ texts.-1dca6e3f }}</div>
         </a>
         <h2 class="h2-small">{{ texts.-1dca6e3f }}</h2>
         <p class="paragraph dark small center">{{ texts.48ff7297 }}</p>
-        <a href="{{ links.-6b750f0c }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+        <a href="{{ links.-6b750f0c }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
       </div>
-      <div class="div-20percent">
+      <div class="div-servicios-inicio">
         <a href="{{ links.-2c4698f7 }}" class="link-block w-inline-block">
           <div class="imagen-boton-redondo fibradevidrio"></div>
+          <div class="descripcion-link">{{ texts.37bce494 }}</div>
         </a>
         <h2 class="h2-small">{{ texts.37bce494 }}</h2>
         <p class="paragraph dark small center">{{ texts.5ed87009 }}</p>
-        <a href="{{ links.-2c4698f7 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+        <a href="{{ links.-2c4698f7 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
       </div>
-    </div>
-    <div class="div-columnas-vertical center">
-      <div class="div-20percent">
-        <a href="{{ links.-7ff00f38 }}" class="link-block w-inline-block">
-          <div class="imagen-boton-redondo sauna"></div>
-        </a>
-        <h2 class="h2-small">{{ texts.-6cd00407 }}</h2>
-        <p class="paragraph dark small center">{{ texts.22dfcce6 }}</p>
-        <a href="{{ links.-7ff00f38 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
-      </div>
-      <div class="div-20percent">
+      <div class="div-servicios-inicio">
         <a href="{{ links.381f0123 }}" class="link-block w-inline-block">
           <div class="imagen-boton-redondo carpinteria"></div>
+          <div class="descripcion-link">{{ texts.38b37622 }}</div>
         </a>
         <h2 class="h2-small">{{ texts.-693990d6 }}</h2>
         <p class="paragraph dark small center">{{ texts.-631640bc }}</p>
-        <a href="{{ links.381f0123 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+        <a href="{{ links.381f0123 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
       </div>
-      <div class="div-20percent">
+      <div class="div-servicios-inicio">
         <a href="{{ links.-e8b7f3 }}" class="link-block w-inline-block">
           <div class="imagen-boton-redondo follaje"></div>
+          <div class="descripcion-link">{{ texts.-7a9c091f }}</div>
         </a>
         <h2 class="h2-small">{{ texts.-7a9c091f }}</h2>
         <p class="paragraph dark small center">{{ texts.-6fcefc00 }}</p>
-        <a href="{{ links.-e8b7f3 }}" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+        <a href="{{ links.-e8b7f3 }}" class="link-text big-underline">{{ texts.-3489eade }}</a>
       </div>
     </div>
   </div>
@@ -162,69 +156,55 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="w-layout-grid grid">
       <div id="w-node-e4b157dc-0507-c729-3d35-dd707b911094-8b114c8d" class="div-justify-center">
         <h2 class="heading-2 center sin-margen-superior">{{ texts.37bce494 }}</h2>
-        <p class="paragraph dark big center">{{ texts.17f057b6 }}</p>
-        <a href="{{ links.-2c4698f7 }}" class="boton-naranja w-button">{{ texts.6cb7c3b }}</a>
+        <p class="paragraph center">{{ texts.17f057b6 }}</p>
+        <a href="{{ links.-2c4698f7 }}" class="boton w-button">{{ texts.-276b24a3 }}</a>
       </div>
       <div id="w-node-_202bd357-e668-0252-8d4a-ea0c877ae214-8b114c8d" class="div-grid-imagen fibra-de-vidrio"></div>
     </div>
   </div>
-  <div class="wf-section">
+  <div class="section-fibra-inicio wf-section">
     <div class="div-center espacio">
-      <div class="div-center vertical espacio-abajo">{%- image images.-284109df.url, images.-284109df.alt, '[{"max":479,"size":"100vw"},{"max":10000,"size":"450px"}]', 'width="450"' -%}
+      <div class="div-center vertical espacio-abajo">{%- image images.-284109df.url, images.-284109df.alt, '[{"max":479,"size":"100vw"},{"max":10000,"size":"450px"}]', 'width="403" height="237"' -%}
         <div class="div-box-small">
-          <h3 class="h3">{{ texts.-27b7291c }}</h3>
+          <h3 class="h3">{{ texts.-35484607 }}</h3>
           <p class="paragraph dark medium center">{{ texts.-79b28347 }}</p>
-          <a href="{{ links.525165e8 }}" target="_blank" class="link-text big-underline">{{ texts.-39baa740 }}</a>
+          <a href="{{ links.525165e8 }}" class="boton w-button">{{ texts.dab5225 }}</a>
         </div>
       </div>
     </div>
     <div class="div-block-5">
       <div class="div-50">
-        <div class="div-center">{%- image images.67c12236.url, images.67c12236.alt, '[]', '' -%}</div>
+        <div class="div-center">{%- image images.67c12236.url, images.67c12236.alt, '[]', 'width="77" height="89"' -%}</div>
         <h3 class="h3">{{ texts.-142cecd7 }}</h3>
-        <p class="paragraph dark medium center">{{ texts.-48fd5b2 }}</p>
+        <p class="paragraph center">{{ texts.-76e0009f }}</p>
       </div>
       <div class="div-50">
-        <div class="div-center">{%- image images.-3f932de.url, images.-3f932de.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"278.390625px"}]', 'height="89"' -%}</div>
+        <div class="div-center">{%- image images.-3f932de.url, images.-3f932de.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"278.390625px"}]', 'height="125" width="391"' -%}</div>
         <h3 class="h3">{{ texts.-42635e28 }}</h3>
-        <p class="paragraph dark medium center">{{ texts.-1fff5a95 }}</p>
-        <a href="{{ links.75d156a6 }}" target="_blank" class="link-text big-underline">{{ texts.-5cb370a4 }}</a>
+        <p class="paragraph center">{{ texts.-1fff5a95 }}</p>
       </div>
     </div>
   </div>
   <div class="wf-section">
     <div class="div-center espacio">
       <div class="div-center vertical espacio-abajo">
-        <div class="image-thumbnail-redondo bambu"></div>
+        <div class="image-thumbnail-rectangular rectangular-bambu"></div>
         <div class="div-box-small">
           <h3 class="h3">{{ texts.-3881b36b }}</h3>
           <p class="paragraph dark medium center">{{ texts.-112ecbdb }}</p>
-          <a href="{{ links.55e45e1b }}" class="link-text big-underline">{{ texts.-3f1df4ac }}</a>
+          <a href="{{ links.55e45e1b }}" class="boton w-button">{{ texts.-2df0ddfe }}</a>
         </div>
       </div>
     </div>
   </div>
-  <div id="follaje-sintetico" class="section-follaje-sintetico wf-section">
-    <div class="w-layout-grid">
+  <div id="follaje-sintetico" class="section-fibra-inicio wf-section">
+    <div class="w-layout-grid grid-5">
       <div id="w-node-af547995-24c0-f446-1b88-6bfb9420cee9-8b114c8d" class="div-block-16 vertical-full-width">
         <h1 class="heading-2 center">{{ texts.-48d59d5c }}</h1>
         <p class="paragraph dark medium center">{{ texts.-1553c5fd }}</p>
-        <a href="{{ links.-aa82943 }}" class="link-text big-underline">{{ texts.7a5d3316 }}</a>
+        <a href="{{ links.-aa82943 }}" class="boton w-button">{{ texts.-742411d5 }}</a>
       </div>
-      <div id="w-node-af547995-24c0-f446-1b88-6bfb9420cef4-8b114c8d" class="div-block-16 vertical-full-width">
-        <div data-delay="3000" data-animation="cross" class="slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
-          <div class="mask w-slider-mask">
-            <div class="slide-galeria-follaje w-slide"></div>
-          </div>
-          <div class="left-arrow w-slider-arrow-left">
-            <div class="icon-2 w-icon-slider-left"></div>
-          </div>
-          <div class="right-arrow w-slider-arrow-right">
-            <div class="icon-3 w-icon-slider-right"></div>
-          </div>
-          <div class="slide-nav w-slider-nav w-round"></div>
-        </div>
-      </div>
+      <div id="w-node-af547995-24c0-f446-1b88-6bfb9420cef4-8b114c8d" class="slide-galeria-follaje"></div>
     </div>
   </div>
   {%- include "partials/footer" -%}
