--- a/theme/[pisos].html
+++ b/theme/[pisos].html
@@ -27,7 +27,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <script type="text/javascript" src="/assets/external/sharethis.js" async="async"></script>
+  <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=606c63411ec66e0011e92e6d&product=sop' async='async'></script>
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
